--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ISRPO_PR4_Cherednichenko"
         mc:Ignorable="d"
-        Title="ПР4 Чередниченко" Height="450" Width="800">
-    <Grid>
+        Title="ПР4 Чередниченко" Height="405.5" Width="330.5" Background="#FF7194D3">
+    <Grid Height="381" VerticalAlignment="Bottom">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="65" Margin="29,45,0,0" TextWrapping="Wrap" Text="3" VerticalAlignment="Top" Width="65" FontSize="24" TextAlignment="Center" FontWeight="Bold"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="65" Margin="130,45,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="66" FontSize="24" TextAlignment="Center" FontWeight="Bold"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="65" Margin="228,45,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="66" FontSize="24" TextAlignment="Center" FontWeight="Bold"/>
+
+        <Button x:Name="Button1Pl3" Content="+3" HorizontalAlignment="Left" Height="26" Margin="29,131,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button1Pl2" Content="+2" HorizontalAlignment="Left" Height="26" Margin="29,162,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button1Pl1" Content="+1" HorizontalAlignment="Left" Height="26" Margin="29,193,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button1M1" Content="-1" HorizontalAlignment="Left" Height="26" Margin="29,239,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button1M2" Content="-2" HorizontalAlignment="Left" Height="26" Margin="29,270,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button1M3" Content="-3" HorizontalAlignment="Left" Height="26" Margin="29,301,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+
+        <Button x:Name="Button2Pl3" Content="+3" HorizontalAlignment="Left" Height="26" Margin="131,131,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button2Pl2" Content="+2" HorizontalAlignment="Left" Height="26" Margin="131,162,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button2Pl1" Content="+1" HorizontalAlignment="Left" Height="26" Margin="131,193,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button2M1" Content="-1" HorizontalAlignment="Left" Height="26" Margin="131,239,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button2M2" Content="-2" HorizontalAlignment="Left" Height="26" Margin="131,270,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button2M3" Content="-3" HorizontalAlignment="Left" Height="26" Margin="131,301,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+
+        <Button x:Name="Button3Pl3" Content="+3" HorizontalAlignment="Left" Height="26" Margin="228,131,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button3Pl2" Content="+2" HorizontalAlignment="Left" Height="26" Margin="229,162,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button3Pl1" Content="+1" HorizontalAlignment="Left" Height="26" Margin="229,193,0,0" VerticalAlignment="Top" Width="65" Background="#FF77BD77" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button3M1" Content="-1" HorizontalAlignment="Left" Height="26" Margin="228,239,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button3M2" Content="-2" HorizontalAlignment="Left" Height="26" Margin="229,270,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
+        <Button x:Name="Button3M3" Content="-3" HorizontalAlignment="Left" Height="26" Margin="228,301,0,0" VerticalAlignment="Top" Width="65" Background="#FF993C3C" Foreground="White" FontWeight="Bold" FontSize="18"/>
         
+        <Label Content="Счетчик" HorizontalAlignment="Left" Height="30" Margin="131,6,0,0" VerticalAlignment="Top" Width="71" FontSize="14" Foreground="White"/>
+        
+        <Button x:Name="ButtonSbros" Content="Сброс" HorizontalAlignment="Left" Margin="238,343,0,0" VerticalAlignment="Top" Width="75" Background="#FFFF9C64" FontSize="16" Foreground="White"/>
+
     </Grid>
 </Window>
